--- a/forms.html
+++ b/forms.html
@@ -18,8 +18,8 @@
     <form>
         <fieldset>
             <legend>Personal Information</legend>
-            <label>Full Name</label>
-            <input type="text">
+            <label for="fullname">Full Name</label>
+            <input type="text" id="fullname" name="fullname">
             <p></p>
             <label>Age</label>
             <input type="text">
